--- a/index.html
+++ b/index.html
@@ -17,25 +17,25 @@
 	<meta name="twitter:creator" content="@nina Carducci">
 	<meta name="twitter:title" content="Nina Carducci, photographe professionnelle basée à Bordeaux">
 	<meta name="twitter:description" content="Capturer les moments les plus précieux de votre vie avec créativité et passion. Photographe professionnelle basée à Bordeaux, spécialisée dans les portraits, les mariages et les événements. Des images authentiques et intemporelles qui racontent votre histoire. Réservez votre séance photo dès maintenant !">
-	<meta name="twitter:image:src" content="https://jonathancornic.github.io/Portfolio-nina-carducci/assets/images/slider/1920/edward-1920.webp">
+	<meta name="twitter:image:src" content="https://hellfire44.github.io/nina-carducci/assets/images/slider/1920/edward-1920.webp">
 	<meta name="twitter:image:alt" content="couple dansant dans un balet">
 
 	<meta property="og:title" content="Nina Carducci, photographe professionnelle basée à Bordeaux">
 	<meta property="og:locale" content="fr_FR">
 	<meta property="og:type" content="website">
-	<meta property="og:url" content="https://jonathancornic.github.io/Portfolio-nina-carducci/">
+	<meta property="og:url" content="https://hellfire44.github.io/nina-carducci/">
 	<meta property="og:author" content="Nina Carducci">
 	<meta property="og:description" content="Capturer les moments les plus précieux de votre vie avec créativité et passion. Photographe professionnelle basée à Bordeaux, spécialisée dans les portraits, les mariages et les événements. Des images authentiques et intemporelles qui racontent votre histoire. Réservez votre séance photo dès maintenant !">
-	<meta property="og:image" content="https://jonathancornic.github.io/Portfolio-nina-carducci/assets/images/slider/1920/edward-1920.webp">
+	<meta property="og:image" content="https://hellfire44.github.io/nina-carducci/assets/images/slider/1920/edward-1920.webp">
 
 	<script type="application/ld+json">
 		{
 			"@context": "https://schema.org",
 			"@type": "LocalBusiness",
 			"name": "Nina Carducci Photographe",
-			"image": "https://jonathancornic.github.io/Portfolio-nina-carducci/assets/images/nina.webp",
-			"@id": "https://jonathancornic.github.io/Portfolio-nina-carducci/assets/images/nina.webp",
-			"url": "https://jonathancornic.github.io/Portfolio-nina-carducci/",
+			"image": "https://hellfire44.github.io/nina-carducci/assets/images/nina.webp",
+			"@id": "https://hellfire44.github.io/nina-carducci/assets/images/nina.webp",
+			"url": "https://hellfire44.github.io/nina-carducci/",
 			"telephone": "05 56 67 78 89",
 			"address": {
 				"@type": "PostalAddress",
@@ -65,7 +65,7 @@
 		}
 	</script>
 
-	<link rel="canonnial" href="https://jonathancornic.github.io/Portfolio-nina-carducci/">
+	<link rel="canonnial" href="https://hellfire44.github.io/nina-carducci/">
 	<meta name="robots" content="index, follow">
 
 	<title>Nina Carducci photographe professionnelle basée à Bordeaux</title>
