--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 					<li><a href="#gallery">Galerie</a></li>
 					<li><a href="#services">Service</a></li>
 					<li><a href="#contact">Contact</a></li>
-					<li><a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr" target="_blank"><img src="assets/images/instagram.png" width="20" height="20" class="link-socials" alt="Logo d'instagram"></a></li>
+					<li><a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr" target="_blank"><img src="assets/images/instagram.png" width="20" height="20" class="link-social" alt="Logo d'instagram"></a></li>
 				</ul>
 			</div>
 		</div>
@@ -99,7 +99,7 @@
 					<div class="carousel-item active">
 						<img src="./assets/images/slider/1024/ryoji-1024.webp" 
 						alt="Homme en costume Traversant un passage piétion" 
-						class="d-block w-100" width="1920" height="888"  
+						class="d-block w-100" id="carouselImage" width="1920" height="888"
 						srcset="./assets/images/slider/320/ryoji-320.webp 320w,
 								./assets/images/slider/375/ryoji-375.webp 375w,
 								./assets/images/slider/425/ryoji-425.webp 425w,
@@ -112,7 +112,7 @@
 					<div class="carousel-item">
 						<img src="./assets/images/slider/1024/nicholas-1024.webp" 
 						alt="Foule dans un concert"
-						class="d-block w-100" width="1920" height="888"
+						class="d-block w-100" width="1920" height="888" id="carouselImage" 
 						srcset="./assets/images/slider/320/nicholas-320.webp 320w,
 								./assets/images/slider/375/nicholas-375.webp 375w,
 								./assets/images/slider/425/nicholas-425.webp 425w,
@@ -125,7 +125,7 @@
 					<div class="carousel-item">
 						<img src="./assets/images/slider/1024/edward-1024.webp" 
 						alt="Couple qui dance dans un balet"
-						class="d-block w-100" width="1920" height="888"
+						class="d-block w-100" width="1920" height="888" id="carouselImage"
 						srcset="./assets/images/slider/320/edward-320.webp 320w,
 								./assets/images/slider/375/edward-375.webp 375w,
 								./assets/images/slider/425/edward-425.webp 425w,
@@ -153,7 +153,7 @@
 	<main>
 		<div id="about">
 			<div class="picture left">
-				<img src="./assets/images/nina.webp" width="560" height="558"  alt="Portrait carré de Nina Carducci, photographe à Bordeaux">
+				<img src="./assets/images/nina.webp" width="560" height="558" id="nina-profil" alt="Portrait carré de Nina Carducci, photographe à Bordeaux">
 			</div>
 			<div id="about-me">
 				<h2 class="about-me__title">A propos de moi</h2>
@@ -165,7 +165,7 @@
 		<div id="gallery">
 			<h2 class="title">Portfolio</h2>
 			<div class="container py-3">
-				<div class="gallery" >
+				<div class="gallery" id="gallery-display">
 					<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/aaron-paul-467.webp" width="440" height="440" alt="Salle de concert">
 					<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/ali-morshedlou-467.webp" width="440" height="440" alt="Portrait d un homme en costume">
 					<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/jason-goodman-467.webp" width="440" height="440" alt="Femme qui rit dans un openspace">
@@ -248,7 +248,7 @@
 					</form>
 				</div>
 				<div class="picture right">
-					<img src="./assets/images/camera.webp" width="419" height="418" alt="Appareil photo">
+					<img src="./assets/images/camera.webp" width="419" height="418" id="camera-webp" alt="Appareil photo">
 				</div>
 			</div>
 		</div>
